--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 270px;
     width: auto;
     height: auto;
     font-family: 'Outfit', sans-serif;
@@ -19,6 +18,7 @@ body {
 
 
 .main {
+    max-width;270px;
     align-items: center;
     background-color: #fff;
     margin-top: 15vh;
