--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 
 .main {
-    max-width;270px;
+    max-width: 270px;
     align-items: center;
     background-color: #fff;
     margin-top: 15vh;
