--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vh;
-    height: auto;
+    width: 100%;
+    height: 100vh;
     font-family: 'Outfit', sans-serif;
 }
 
@@ -29,7 +29,7 @@ body {
 .card {
     align-items: center;
     background-color: #fff;
-    padding: 15px;
+    padding: 10px;
     border-radius: 20px;
 }
 
