--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 .card {
     align-items: center;
     background-color: #fff;
-    padding: 10px;
+    padding: 15px;
     border-radius: 20px;
 }
 
@@ -44,6 +44,8 @@ h1 {
 }
 
 p {
+    Text-align: center;
+    Padding-bottom: 10px;
     padding-top: 10px;
     margin-bottom: 10px;
     color: hsl(216, 2%, 48%);
