--- a/style.css
+++ b/style.css
@@ -15,37 +15,39 @@ body {
     font-family: 'Outfit', sans-serif;
 }
 
-.imagem { 
-    Border-radius: 10px;
-    max-width: 260px; 
-    width: 100%; 
-}
 
-.card { 
-   width: 100%; 
-   max-width: 260px; 
-}
-
-.card {
+main {
     align-items: center;
     background-color: #fff;
     padding: 15px;
     border-radius: 20px;
+    width: 100%;
+    max-width: 220px;
+}
+
+.favicon {
+    padding: 95px;
+    position:absolute;
+    width: 32px;
+}
+
+img {
+    border-radius: 10px;
+    width: 260px;
+    max-width: 240px;
+    width: 100%;
 }
 
 h1 {
-    display: flex;
-    justify-content: center;
-    justify-items: center;
+    text-align: center;
     color: hsl(216, 100%, 14%);
     align-items: center;
     font-size: 20px;
     margin-bottom: 5px;
+    margin-top: 10px;
 }
 
 p {
-    Text-align: center;
-    Padding-bottom: 10px;
     padding-top: 10px;
     margin-bottom: 10px;
     color: hsl(216, 2%, 48%);
