--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 body {
     background-color: hsl(212, 45%, 89%);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -22,32 +23,41 @@ main {
     padding: 15px;
     border-radius: 20px;
     width: 100%;
-    max-width: 220px;
+    max-width: 300px;
 }
 
 .favicon {
-    padding: 95px;
+    padding: 135px;
     position:absolute;
     width: 32px;
 }
 
 img {
     border-radius: 10px;
-    width: 260px;
-    max-width: 240px;
+    width: 280px;
+    max-width: 300px;
     width: 100%;
+}
+
+.texto {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 100%;
 }
 
 h1 {
     text-align: center;
     color: hsl(216, 100%, 14%);
-    align-items: center;
-    font-size: 20px;
+    font-size: 25px;
     margin-bottom: 5px;
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 p {
+    margin-left: 10px;
+    max-width: 90%;
+    text-align: center;
     padding-top: 10px;
     margin-bottom: 10px;
     color: hsl(216, 2%, 48%);
